# checkmark

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  verify_kafka.py
checkmark-backend/: main.py  pyproject.toml  seed_data.py
checkmark-backend/app/: database.py
checkmark-backend/app/api/: charts.py  workspaces.py
checkmark-backend/app/crud/: chart.py  workspace.py
checkmark-backend/app/models/: __init__.py  chart.py  user.py  workspace.py
checkmark-backend/app/schemas/: __init__.py  chart.py  user.py  workspace.py
checkmark-frontend/: next.config.ts  package-lock.json  package.json
checkmark-frontend/app/: globals.css  layout.tsx  page.tsx
checkmark-frontend/app/workspaces/: loading.tsx  page.tsx
checkmark-frontend/app/workspaces/[id]/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
checkmark-frontend/app/workspaces/[id]/@canvas/: default.tsx  loading.tsx
checkmark-frontend/app/workspaces/[id]/@sidebar/: default.tsx  loading.tsx
checkmark-frontend/components/charts/: ChartGallery.tsx  ChartRenderer.tsx
checkmark-frontend/components/workspace/: NewWorkspaceButton.tsx  PresenceAvatars.tsx
checkmark-frontend/lib/actions/: workspace-actions.ts
checkmark-frontend/lib/api/: mock-data.ts.bak  python-client.ts
checkmark-frontend/lib/charts/: presets.ts
checkmark-frontend/lib/websocket/: use-presence.ts  use-websocket.ts
checkmark-frontend/types/: api.ts  chart.ts  websocket.ts  workspace.ts
